👽 devops兼顾java8和11；新增config选项，源env重载，pid文件增加token；slardar新增illegal-access监控