@@ -5,71 +5,76 @@ cat <<EOF
 #################################################
 # Version $THIS_VERSION # for Mac&Lin / BusyBox&Bash
 # 使用'ln -s'把此脚本软连接到'执行目录/workdir'，
-# 其同名'env'如（wings-starter.env）会被自动载入。
+# 链接源及链接的同名'env'，文件会被自动载入，当前覆盖源配置项。
 # 同一主机环境，同一boot.jar只能执行一份，多份需更名。
 # 'BOOT_CNF|BOOT_ARG|JAVA_ARG' 内变量可被延时求值，
 # 使用 ' 为延时求值，使用 " 为立即求值。 默认Java 11 G1
 #################################################
 EOF
 ################ modify the following params ################
-WORK_DIR=''      # 脚本生成文件，日志的目录，默认空（脚本位置）
-TAIL_LOG='log'   # 默认tail的日志，"log|out|new|ask"
-USER_RUN=$USER   # 用来启动程序的用户
-PORT_RUN=''      # 默认端口，空时
-BOOT_JAR=''      # 主程序。可通过$1覆盖，绝对路径或相对WORK_DIR
-ARGS_RUN='start' # 默认参数。若$1或$2指定
-BOOT_OUT=''      # 控制台日志，默认 $BOOT_JAR-*.out
-BOOT_LOG=''      # 程序日志，需要外部指定，用来tail
-BOOT_PID=''      # 主程序pid，默认 $BOOT_JAR.pid
-BOOT_CNF=''      # 外部配置。通过env覆盖
-BOOT_ARG=''      # 启动参数。通过env覆盖
-JAVA_XMS='1G'    # 启动参数。通过env覆盖
-JAVA_XMX='3G'    # 启动参数。通过env覆盖
-WARN_TXT=''      # 预设的警告词
-WARN_AGO=''      # 日志多少秒不更新，则警报，空表示忽略
-WARN_RUN=''      # 若pid消失或日志无更新则执行
+WORK_DIR=''          # 脚本生成文件，日志的目录，默认空（脚本位置）
+TAIL_LOG='log'       # 默认tail的日志，"log|out|new|ask"
+USER_RUN=$USER       # 用来启动程序的用户
+PORT_RUN=''          # 默认端口，空时
+ARGS_RUN='start'     # 默认参数。若$1或$2指定
+BOOT_JAR=''          # 主程序。可通过$1覆盖，绝对路径或相对WORK_DIR
+BOOT_OUT=''          # 控制台日志，默认 $BOOT_JAR-*.out
+BOOT_LOG=''          # 程序日志，需要外部指定，用来tail
+BOOT_PID=''          # 主程序pid，默认 $BOOT_JAR.pid
+BOOT_CNF=''          # 外部配置。通过env覆盖
+BOOT_ARG=''          # 启动参数。通过env覆盖
+JAVA_XMS='1G'        # 启动参数。通过env覆盖
+JAVA_XMX='3G'        # 启动参数。通过env覆盖
+WARN_TXT=''          # 预设的警告词
+WARN_AGO=''          # 日志多少秒不更新，则警报，空表示忽略
+WARN_RUN=''          # 若pid消失或日志无更新则执行
 # shellcheck disable=SC2153
-JDK_HOME=$JDK11_HOME      # 指定jdk版本
+JDK_HOME=''          # 指定jdk版本
 # shellcheck disable=SC2016
-JAVA_ARG='
---illegal-access=permit
+JDK8_ARG='
+-Xloggc:${BOOT_TKN}.gc
+-XX:+PrintGC
+-XX:+PrintGCDetails
+-XX:+PrintGCDateStamps
+'
+# shellcheck disable=SC2016
+JDK9_ARG='
 --add-modules java.se
 --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
 --add-opens java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.util=ALL-UNNAMED
 --add-opens java.base/java.nio=ALL-UNNAMED
 --add-opens java.base/sun.nio.ch=ALL-UNNAMED
 --add-opens java.management/sun.management=ALL-UNNAMED
 --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
 --add-opens=java.base/sun.security.x509=ALL-UNNAMED
 --add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED
-
+-Xlog:gc*=info:file=${BOOT_TKN}.gc:time,tid,tags:filecount=5,filesize=100m
+'
+# shellcheck disable=SC2016
+JAVA_ARG='
 -server
 -Djava.awt.headless=true
 -Dfile.encoding=UTF-8
-
 -Xms${JAVA_XMS}
 -Xmx${JAVA_XMX}
--XX:MetaspaceSize=128m
+-XX:MetaspaceSize=256M
+-XX:AutoBoxCacheMax=20000
+-XX:MaxDirectMemorySize=1024M
+-XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${BOOT_TKN}.hprof
 -XX:+UseG1GC
 -XX:MaxGCPauseMillis=200
 -XX:ParallelGCThreads=8
 -XX:ConcGCThreads=8
--XX:InitiatingHeapOccupancyPercent=70
--XX:AutoBoxCacheMax=20000
--XX:BiasedLockingStartupDelay=500
--XX:+HeapDumpOnOutOfMemoryError
--XX:+ExitOnOutOfMemoryError
--XX:MaxDirectMemorySize=1024M
-
--XX:HeapDumpPath=${BOOT_TKN}.heap
--Xlog:gc*=info:file=${BOOT_TKN}.gc:time,tid,tags:filecount=5,filesize=100m
 '
+# -XX:+ExitOnOutOfMemoryError #docker
 
 ################ NO NEED to modify the following ################
 BOOT_DTM=$(date '+%y%m%d%H%M%S') # 启动日时
 BOOT_TKN=''                      # 启动token，由jar+dtm构成
 BOOT_MD5=''                      # 以safe模式执行的文件md5sum
 JAR_NAME=''                      # boot-jar本名
+JAVA_OPT=''                      # java 实际启动参加
 #
 function print_help() {
     echo -e '\033[32m docker \033[m start in docker with console log'
@@ -81,22 +86,24 @@ function print_help() {
     echo -e '\033[32m cron \033[m show the {boot-jar} crontab usage'
     echo -e '\033[32m free \033[m check memory free'
     echo -e '\033[32m check \033[m check shell command'
-    echo -e '\033[37;43;1m default ./wings-starter.sh start\033[m'
-    echo -e '\033[37;43;1m default ./wings-starter.sh boot.jar start\033[m'
+    echo -e '\033[32m config \033[m output config envs'
+    echo -e '\033[37;43;1m default is start, for example\033[m'
+    echo -e './wings-starter.sh'
+    echo -e './wings-starter.sh status'
+    echo -e './wings-starter.sh boot.jar start'
 }
 
 function print_args() {
     echo -e "\033[37;42;1mINFO: ==== boot arguments ==== \033[0m"
-    echo "boot-jar=$BOOT_JAR"
-    echo "boot-md5=$BOOT_MD5"
-    echo "boot-tkn=$BOOT_TKN"
-    echo "boot-pid=$BOOT_PID"
-    echo "boot-log=$BOOT_LOG"
-    echo "boot-out=$BOOT_OUT"
-    echo "boot-arg=$BOOT_ARG"
-
+    echo "BOOT_JAR=$BOOT_JAR"
+    echo "BOOT_MD5=$BOOT_MD5"
+    echo "BOOT_TKN=$BOOT_TKN"
+    echo "BOOT_PID=$BOOT_PID"
+    echo "BOOT_LOG=$BOOT_LOG"
+    echo "BOOT_OUT=$BOOT_OUT"
+    echo "BOOT_ARG=$BOOT_ARG"
     echo -e "\033[37;42;1mINFO: ==== java arguments ==== \033[0m"
-    echo "$JAVA_ARG"
+    echo "$JAVA_OPT"
 }
 
 function check_cmd() {
@@ -120,6 +127,12 @@ function check_java() {
     if ! java -version; then
         echo -e "\033[37;41;1mERROR: can not found 'java' in the $PATH \033[0m"
         exit
+    fi
+
+    if [[ $(java -help 2>&1 | grep -cF 'add-modules') -gt 0 ]]; then
+        JAVA_OPT="$JDK9_ARG $JAVA_ARG"
+    else
+        JAVA_OPT="$JDK8_ARG $JAVA_ARG"
     fi
 }
 
@@ -148,6 +161,15 @@ function check_boot() {
 # load env
 echo -e "\033[37;42;1mINFO: ==== boot env ==== \033[0m"
 this_file="$0"
+if [[ -L "$this_file" ]]; then
+    link_file=$(realpath $this_file)
+    link_envs=${link_file%.*}.env
+    if [[ -f "$link_envs" ]]; then
+        echo "env-link=$link_envs"
+        # shellcheck disable=SC1090
+        source "$link_envs"
+    fi
+fi
 this_envs=${this_file%.*}.env
 if [[ -f "$this_envs" ]]; then
     echo "env-file=$this_envs"
@@ -158,7 +180,7 @@ else
 fi
 
 # change workdir
-if [[ "$WORK_DIR" == "" ]]; then
+if [[ ! -d "$WORK_DIR" ]]; then
     WORK_DIR=$(dirname "$this_file")
 fi
 cd "$WORK_DIR" || exit
@@ -177,8 +199,27 @@ fi
 # check boot jar
 check_boot
 JAR_NAME=$(basename "$BOOT_JAR")
-BOOT_TKN="${JAR_NAME}-${BOOT_DTM}"
 
+# boot pid
+if [[ "$BOOT_PID" == "" ]]; then
+    BOOT_PID="${JAR_NAME}.pid"
+fi
+
+# boot tkn
+BOOT_TKN="${JAR_NAME}-${BOOT_DTM}"
+if [[ "$ARGS_RUN" != "start" && -f "$BOOT_PID" ]]; then
+   old_tkn=$(awk '{print $2}' "$BOOT_PID")
+   if [[ "$old_tkn" != "" ]]; then
+      BOOT_TKN=$old_tkn
+   fi
+fi
+
+# boot out
+if [[ "$BOOT_OUT" == "" ]]; then
+    BOOT_OUT="${BOOT_TKN}.out"
+fi
+
+# boot md5
 file_md5="${JAR_NAME}.md5"
 if [[ -f "$file_md5" ]]; then
     BOOT_MD5=$(awk '{print $1}' <"$file_md5")
@@ -188,22 +229,15 @@ fi
 if [[ "$JDK_HOME" != "" && "$JDK_HOME" != "$JAVA_HOME" ]]; then
     PATH=$JDK_HOME/bin:$PATH
     JAVA_HOME=$JDK_HOME
-    echo -e "\033[37;42;1mINFO: use JAVA_HOME=$JAVA_HOME ==== \033[0m"
-fi
-
-# check pid&out
-if [[ "$BOOT_PID" == "" ]]; then
-    BOOT_PID="${JAR_NAME}.pid"
-fi
-if [[ "$BOOT_OUT" == "" ]]; then
-    # shellcheck disable=SC2012,SC2086
-    BOOT_OUT="$(ls -t ${JAR_NAME}*.out 2>/dev/null | head -n1)"
+    echo -e "\033[37;42;1mINFO: ==== JAVA_HOME=$JAVA_HOME ==== \033[0m"
 fi
 
 # lazy env
 BOOT_CNF=$(eval "echo \"$BOOT_CNF\"")
 BOOT_ARG=$(eval "echo \"$BOOT_ARG\"")
 JAVA_ARG=$(eval "echo \"$JAVA_ARG\"")
+JDK8_ARG=$(eval "echo \"$JDK8_ARG\"")
+JDK9_ARG=$(eval "echo \"$JDK9_ARG\"")
 
 # calc arg
 if [[ "$BOOT_CNF" != "" ]]; then
@@ -228,7 +262,7 @@ case "$ARGS_RUN" in
         print_args
         if [[ $count -eq 0 ]]; then
             # shellcheck disable=SC2086
-            java $JAVA_ARG -jar $BOOT_JAR $BOOT_ARG 2>&1
+            java $JAVA_OPT -jar $BOOT_JAR $BOOT_ARG 2>&1
         else
             echo -e "\033[37;41;1mERROR: has $count running $BOOT_JAR \033[0m"
             pgrep -alf "$grep_key"
@@ -254,19 +288,21 @@ case "$ARGS_RUN" in
             cp "$BOOT_JAR" "$safe_jar"
         fi
 
-        BOOT_OUT="${BOOT_TKN}.out"
         #
         print_args
         check_user
 
+        touch "$BOOT_OUT"
+        real_out=$(realpath "$BOOT_OUT")
         # shellcheck disable=SC2086
-        nohup java $JAVA_ARG -jar $safe_jar $BOOT_ARG >$BOOT_OUT 2>&1 &
-        echo $! >"$BOOT_PID"
+        nohup java $JAVA_OPT -Dwings.console.out=$real_out -jar $safe_jar $BOOT_ARG >$BOOT_OUT 2>&1 &
+        echo "$! ${BOOT_TKN}" >"$BOOT_PID"
         sleep 2
 
         cid=$(pgrep -f "$grep_key" | tr '\n' ' ')
         if [[ "$cid" == "" ]]; then
             echo -e "\033[37;41;1mERROR: failed to check PID by $BOOT_JAR \033[0m"
+            cat "$BOOT_OUT"
             exit
         else
             echo -e "\033[37;43;1mNOTE: current PID=$cid of $BOOT_JAR \033[0m"
@@ -310,8 +346,6 @@ case "$ARGS_RUN" in
         fi
         ;;
     stop)
-        print_args
-
         if [[ $count -eq 0 ]]; then
             echo -e "\033[37;43;1mNOTE: not running $BOOT_JAR \033[0m"
             exit
@@ -326,7 +360,7 @@ case "$ARGS_RUN" in
 
         check_user
 
-        pid=$(cat "$BOOT_PID")
+        pid=$(awk '{print $1}' "$BOOT_PID")
         if [[ $pid -ne $cid ]]; then
             echo -e "\033[31mWARN: pid not match, file-pid=$pid , proc-pid=$cid \033[0m"
             echo -e "\033[31mWARN: press <ENTER> to kill $pid, <y> to kill all $cid \033[0m"
@@ -365,37 +399,37 @@ case "$ARGS_RUN" in
         kill -9 $pid
         ;;
     status)
-        print_args
-
         if [[ $count -eq 0 ]]; then
             echo -e "\033[37;43;1mNOTE: not running $BOOT_JAR \033[0m"
             exit
         fi
 
-        tail_num=10
+        check_java
+        print_args
+
+        tail_num=20
         if [[ -f "$BOOT_OUT" ]]; then
-            echo -e "\033[37;43;1mNOTE: last $tail_num lines of output=$BOOT_OUT \033[0m"
+            echo -e "\033[37;43;1mNOTE: tail -n $tail_num $BOOT_OUT \033[0m"
             tail -n $tail_num "$BOOT_OUT"
         fi
         if [[ -f "$BOOT_LOG" ]]; then
-            echo -e "\033[37;43;1mNOTE: tail $tail_num lines of log-file= $BOOT_LOG \033[0m"
+            echo -e "\033[37;43;1mNOTE: tail -n $tail_num $BOOT_LOG \033[0m"
             tail -n $tail_num "$BOOT_LOG"
         fi
-        pid=$(cat "$BOOT_PID")
-        cid=$(pgrep -f "$grep_key" | tr '\n' ' ')
+        pid=$(awk '{print $1}' "$BOOT_PID")
+        cid=$(pgrep -f "$grep_key")
         echo -e "\033[37;43;1mNOTE: boot.pid=$pid \033[0m"
         echo -e "\033[33mNOTE: current PID=$cid of $BOOT_JAR \033[0m"
-        # shellcheck disable=SC2086
-        ps -fwww $cid
+        ps -fwww "$cid" || exit
 
         if [[ $pid -ne $cid ]]; then
             echo -e "\033[31mWARN: pid not match, proc-pid=$cid, file-pid=$pid \033[0m"
         fi
 
-        # shellcheck disable=SC2009,SC2086
-        mrs=$(ps -o rss $cid | grep -v RSS | numfmt --grouping)
-        # shellcheck disable=SC2009,SC2086
-        mvs=$(ps -o vsz $cid | grep -v VSZ | numfmt --grouping)
+        # shellcheck disable=SC2009
+        mrs=$(ps -o rss "$cid" | grep -v RSS | numfmt --grouping)
+        # shellcheck disable=SC2009
+        mvs=$(ps -o vsz "$cid" | grep -v VSZ | numfmt --grouping)
         echo -e "\033[37;43;1mNOTE: ps -o rss -o vsz $cid \033[0m"
         echo -e "\033[32m Resident= $mrs Kb\033[m"
         echo -e "\033[32m Virtual=  $mvs Kb\033[m"
@@ -406,9 +440,10 @@ case "$ARGS_RUN" in
         echo -e "\033[32m java -jar arthas-boot.jar $cid \033[m https://github.com/alibaba/arthas"
 
         check_user
-        echo -e "\033[37;43;1mNOTE: jstat -gcutil $cid 1000 5 \033[0m"
-        # shellcheck disable=SC2086
-        jstat -gcutil $cid 1000 5
+        echo -e "\033[37;43;1mNOTE: jstat -gcutil $cid 1000 1 \033[0m"
+        jstat -gcutil "$cid" 1000 1
+        echo -e "\033[37;43;1mNOTE: jstat -gc $cid 1000 1 \033[0m"
+        jstat -gc "$cid" 1000 1
         ;;
     warn)
         warn_got=''
@@ -515,10 +550,34 @@ case "$ARGS_RUN" in
         check_cmd ps
         check_cmd realpath
         check_cmd tail
+        check_cmd touch
         check_cmd tr
         check_cmd wc
         check_cmd which
         check_cmd xargs
+        ;;
+    config)
+        echo -e '\033[37;42;1mNOTE: ==== conf env ==== \033[m'
+        echo "WORK_DIR=$WORK_DIR"
+        echo "TAIL_LOG=$TAIL_LOG"
+        echo "USER_RUN=$USER_RUN"
+        echo "PORT_RUN=$PORT_RUN"
+        echo "ARGS_RUN=$ARGS_RUN"
+        echo "BOOT_JAR=$BOOT_JAR"
+        echo "BOOT_OUT=$BOOT_OUT"
+        echo "BOOT_LOG=$BOOT_LOG"
+        echo "BOOT_PID=$BOOT_PID"
+        echo "BOOT_CNF=$BOOT_CNF"
+        echo "BOOT_ARG=$BOOT_ARG"
+        echo "JAVA_XMS=$JAVA_XMS"
+        echo "JAVA_XMX=$JAVA_XMX"
+        echo "JDK_HOME=$JDK_HOME"
+        echo "JDK8_ARG=$JDK8_ARG"
+        echo "JDK9_ARG=$JDK9_ARG"
+        echo "JAVA_ARG=$JAVA_ARG"
+        echo "WARN_TXT=$WARN_TXT"
+        echo "WARN_AGO=$WARN_AGO"
+        echo "WARN_RUN=$WARN_RUN"
         ;;
     *)
         if [[ "$ARGS_RUN" == "help" ]]; then
